--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
                     <ul class="mt-4 space-y-4">
                         <li><a href="{{ '/blog/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Investor Education (Blog)</a></li>
                         <li><a href="#" class="text-base text-gray-400 hover:text-white">Market Research</a></li>
-                        <li><a href="/calculators/" class="text-base text-gray-400 hover:text-white">Calculators</a></li>
+                        <li><a href="{{ '/calculators/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Calculators</a></li>
                         <!-- <li><a href="#" class="text-base text-gray-400 hover:text-white">FAQs</a></li> -->
                     </ul>
                 </div>
