--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,8 @@
                 <div>
                     <h3 class="text-sm font-semibold text-gray-300 tracking-wider uppercase">Company</h3>
                     <ul class="mt-4 space-y-4">
-                        <li><a href="about.html" class="text-base text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="process.html" class="text-base text-gray-400 hover:text-white">Investment Process</a></li>
+                        <li><a href="{{ '/about/' | relative_url }}" class="text-base text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="{{ '/process/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Investment Process</a></li>
                         <li><a href="#" class="text-base text-gray-400 hover:text-white">Careers</a></li>
                         <!-- <li><a href="#" class="text-base text-gray-400 hover:text-white">Press</a></li> -->
                     </ul>
