--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,8 +14,8 @@
                     <ul class="mt-4 space-y-4">
                         <li><a href="{{ '/about/' | relative_url }}" class="text-base text-gray-400 hover:text-white">About Us</a></li>
                         <li><a href="{{ '/process/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Investment Process</a></li>
-                        <li><a href="#" class="text-base text-gray-400 hover:text-white">Careers</a></li>
-                        <!-- <li><a href="#" class="text-base text-gray-400 hover:text-white">Press</a></li> -->
+                        <li><a href="{{ '/philosophy/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Philosophy</a></li>
+                        <li><a href="{{ '/careers/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Careers</a></li>
                     </ul>
                 </div>
                 <div>
@@ -24,7 +24,7 @@
                         <li><a href="{{ '/blog/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Investor Education (Blog)</a></li>
                         <li><a href="#" class="text-base text-gray-400 hover:text-white">Market Research</a></li>
                         <li><a href="{{ '/calculators/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Calculators</a></li>
-                        <!-- <li><a href="#" class="text-base text-gray-400 hover:text-white">FAQs</a></li> -->
+                        <li><a href="{{ '/risk/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Risk Profile</a></li>
                     </ul>
                 </div>
                 <div>
@@ -37,11 +37,11 @@
                     </ul>
                 </div>
                 <div>
-                    <h3 class="text-sm font-semibold text-gray-300 tracking-wider uppercase">Connect</h3>
+                    <h3 class="text-sm font-semibold text-gray-300 tracking-wider uppercase">Quick Links</h3>
                     <ul class="mt-4 space-y-4">
-                        <li><a href="#" class="text-base text-gray-400 hover:text-white">Facebook</a></li>
-                        <li><a href="#" class="text-base text-gray-400 hover:text-white">Twitter</a></li>
-                        <li><a href="#" class="text-base text-gray-400 hover:text-white">LinkedIn</a></li>
+                        <li><a href="https://www.amfiindia.com/" target="_blank" class="text-base text-gray-400 hover:text-white">AMFI</a></li>
+                        <li><a href="https://www.sebi.gov.in/" target="_blank" class="text-base text-gray-400 hover:text-white">SEBI</a></li>
+                        <li><a href="#" class="text-base text-gray-400 hover:text-white">ARN Certificate</a></li>
                         <!-- <li><a href="#" class="text-base text-gray-400 hover:text-white">YouTube</a></li> -->
                     </ul>
                 </div>
