config-defaults-updated

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
                         <li><a href="{{ '/blog/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Investor Education (Blog)</a></li>
                         <li><a href="#" class="text-base text-gray-400 hover:text-white">Market Research</a></li>
                         <li><a href="{{ '/calculators/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Calculators</a></li>
-                        <li><a href="{{ '/risk/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Risk Profile</a></li>
+                        <li><a href="{{ '/risk-quiz/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Risk Profile</a></li>
                     </ul>
                 </div>
                 <div>
@@ -41,8 +41,8 @@
                     <ul class="mt-4 space-y-4">
                         <li><a href="https://www.amfiindia.com/" target="_blank" class="text-base text-gray-400 hover:text-white">AMFI</a></li>
                         <li><a href="https://www.sebi.gov.in/" target="_blank" class="text-base text-gray-400 hover:text-white">SEBI</a></li>
+                        <li><a href="https://www.camskra.com/" target="_blank"" target="_blank" class="text-base text-gray-400 hover:text-white">Check Your KYC</a></li>
                         <li><a href="#" class="text-base text-gray-400 hover:text-white">ARN Certificate</a></li>
-                        <!-- <li><a href="#" class="text-base text-gray-400 hover:text-white">YouTube</a></li> -->
                     </ul>
                 </div>
             </div>
