--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,6 +27,13 @@
           About Us
         </a>
 
+        <a href="{{ '/services/' | relative_url }}"
+           class="inline-flex items-center px-1 pt-1 text-base font-medium
+           {% if page.url == '/services/' %} text-gray-900 border-b-2 border-blue-500
+           {% else %} text-gray-500 hover:text-gray-900 {% endif %}">
+          Our services
+        </a>
+
         <a href="{{ '/process/' | relative_url }}"
            class="inline-flex items-center px-1 pt-1 text-base font-medium
            {% if page.url == '/process/' %} text-gray-900 border-b-2 border-blue-500
@@ -75,6 +82,13 @@
          {% if page.url == '/about/' %} bg-blue-50 border-blue-500 text-blue-700
          {% else %} border-transparent text-gray-500 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-700 {% endif %}">
         About Us
+      </a>
+
+      <a href="{{ '/services/' | relative_url }}"
+         class="block pl-3 pr-4 py-2 border-l-4 text-base font-medium
+         {% if page.url == '/services/' %} bg-blue-50 border-blue-500 text-blue-700
+         {% else %} border-transparent text-gray-500 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-700 {% endif %}">
+         Our services
       </a>
 
       <a href="{{ '/process/' | relative_url }}"
