--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <link rel="icon" href="{{ '/assets/favicon/favicon.ico' | relative_url }}">
 
 	<script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/feather-icons"></script>
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
@@ -31,6 +32,9 @@
 
   <!-- Footer -->
   {% include footer.html %}
+
+  <!-- Floating buttons-->
+   {% include floating-button.html %}
 
   <!-- JS for Mobile Menu Toggle -->
   <script>
