--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="{{ '/assets/favicon/site.webmanifest' | relative_url }}">
     <link rel="shortcut icon" href="{{ '/assets/favicon/favicon.ico' | relative_url }}">
     <link rel="icon" href="{{ '/assets/favicon/favicon.ico' | relative_url }}">
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/feather-icons"></script>
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
