--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,28 +41,29 @@
                     <ul class="mt-4 space-y-4">
                         <li><a href="https://www.amfiindia.com/" target="_blank" class="text-base text-gray-400 hover:text-white">AMFI</a></li>
                         <li><a href="https://www.sebi.gov.in/" target="_blank" class="text-base text-gray-400 hover:text-white">SEBI</a></li>
-                        <li><a href="https://www.camskra.com/" target="_blank"" target="_blank" class="text-base text-gray-400 hover:text-white">Check Your KYC</a></li>
-                        <li><a href="#" class="text-base text-gray-400 hover:text-white">ARN Certificate</a></li>
+                        <li><a href="https://www.camskra.com/" target="_blank" class="text-base text-gray-400 hover:text-white">Check Your KYC</a></li>
+                        <li><a href="/assets/arn.pdf" target="_blank"  class="text-base text-gray-400 hover:text-white">ARN Certificate</a></li>
                     </ul>
                 </div>
             </div>
             <div class="mt-8 border-t border-gray-700 pt-8 md:flex md:items-center md:justify-between">
                 <div class="flex space-x-6 md:order-2">
-                    <a href="#" class="text-gray-400 hover:text-white">
+                    <a class="text-gray-400 hover:text-white">
                         <i data-feather="facebook" class="h-6 w-6"></i>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-white">
+                    <a class="text-gray-400 hover:text-white">
                         <i data-feather="twitter" class="h-6 w-6"></i>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-white">
-                        <i data-feather="linkedin" class="h-6 w-6"></i>
+                    <a class="text-gray-400 hover:text-white">
+                        <i data-feather="instagram" class="h-6 w-6"></i>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-white">
+                    <a class="text-gray-400 hover:text-white">
                         <i data-feather="youtube" class="h-6 w-6"></i>
                     </a>
                 </div>
                 <p class="mt-8 text-base text-gray-400 md:mt-0 md:order-1">
-                    &copy; 2025 Earthen Capital. All rights reserved.
+                    &copy; 2025 Earthen Capital. All rights reserved.<br/>
+                    AMFI registered Mutual Fund Distributor (ARN-345670).
                 </p>
             </div>
         </div>
