--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,13 +48,13 @@
             </div>
             <div class="mt-8 border-t border-gray-700 pt-8 md:flex md:items-center md:justify-between">
                 <div class="flex space-x-6 md:order-2">
-                    <a class="text-gray-400 hover:text-white">
+                    <a href="https://www.facebook.com/earthencapital/" target="_blank" class="text-gray-400 hover:text-white">
                         <i data-feather="facebook" class="h-6 w-6"></i>
                     </a>
                     <a class="text-gray-400 hover:text-white">
                         <i data-feather="twitter" class="h-6 w-6"></i>
                     </a>
-                    <a class="text-gray-400 hover:text-white">
+                    <a href="https://www.instagram.com/earthen.capital/" target="_blank" class="text-gray-400 hover:text-white">
                         <i data-feather="instagram" class="h-6 w-6"></i>
                     </a>
                     <a class="text-gray-400 hover:text-white">
