--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -104,6 +104,7 @@
       </a>
 
       <a href="{{ '/#contact' | relative_url }}"
+        onclick="document.getElementById('mobile-menu').classList.add('hidden')"
         class="block mx-3 mt-2 px-4 py-2 text-base font-medium text-center bg-blue-600 text-white hover:bg-blue-700 rounded-md transition-colors">
         CONTACT US
       </a>
