--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,8 @@
                         <li><a href="{{ '/blog/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Investor Education (Blog)</a></li>
                         <li><a href="#" class="text-base text-gray-400 hover:text-white">Market Research</a></li>
                         <li><a href="{{ '/calculators/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Calculators</a></li>
-                        <li><a href="{{ '/risk-quiz/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Risk Profile</a></li>
+                        <!-- <li><a href="{{ '/risk-quiz/' | relative_url }}" class="text-base text-gray-400 hover:text-white">Risk Profile</a></li> -->
+                        <li><a href="https://risk-profile-sentinel.streamlit.app/" target="_blank" class="text-base text-gray-400 hover:text-white">Risk Profile</a></li>
                     </ul>
                 </div>
                 <div>
@@ -57,7 +58,7 @@
                     <a href="https://www.instagram.com/earthen.capital/" target="_blank" class="text-gray-400 hover:text-white">
                         <i data-feather="instagram" class="h-6 w-6"></i>
                     </a>
-                    <a class="text-gray-400 hover:text-white">
+                    <a href="https://www.youtube.com/@EarthenCapital" target="_blank" class="text-gray-400 hover:text-white">
                         <i data-feather="youtube" class="h-6 w-6"></i>
                     </a>
                 </div>
