--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -62,9 +62,9 @@
                         <i data-feather="youtube" class="h-6 w-6"></i>
                     </a>
                 </div>
-                <p class="mt-8 text-base text-gray-400 md:mt-0 md:order-1">
-                    &copy; 2025 Earthen Capital. All rights reserved.<br/>
-                    AMFI registered Mutual Fund Distributor (ARN-345670).
+                <p class="mt-8 text-xs text-gray-400 md:mt-0 md:order-1">
+                    &copy; {{site.copyright.start_year}} &ndash; {{site.time | date: "%Y"}} Earthen Capital. All rights reserved.<br/>
+                    Mutual Fund investments are subject to market risks. Please read all scheme related documents carefully before investing. <br/>Past performance is not an indicator of future returns. AMFI license number (ARN-345670).
                 </p>
             </div>
         </div>
